<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/bt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bt_title2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_title3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="jp.suntech.c22005.mypicturebook.TopFragment"
        android:layout_width="400dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/FrameLayout"
        android:layout_width="410dp"
        android:layout_height="390dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

    </FrameLayout>

    <TextView
        android:id="@+id/TextMainTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tv_maintitle"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/TitleTREX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/tv_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Titlebrakio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/bt_title"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Titleputerano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="25dp"
        android:text="@string/bt_title3"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentContainerView"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
